--- a/res/layout/preference_custom_seekbar.xml
+++ b/res/layout/preference_custom_seekbar.xml
@@ -15,13 +15,15 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/card_single"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginVertical="10dp"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:gravity="center_vertical"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:background="?android:attr/activatedBackgroundIndicator"
     android:clipToPadding="false">
 
     <LinearLayout
@@ -30,9 +32,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="-4dp"
         android:minWidth="60dp"
-        android:gravity="start|center_vertical"
+        android:gravity="center|start"
         android:orientation="horizontal"
-        android:paddingEnd="12dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="8dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp">
         <com.android.internal.widget.PreferenceImageView
@@ -73,6 +78,7 @@
             android:id="@+id/value_frame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             android:layout_below="@android:id/summary"
             android:layout_alignStart="@android:id/title" >
 
@@ -125,6 +131,7 @@
                 android:id="@+id/seekbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="3dp"
                 android:layout_weight="1"
                 android:layout_toEndOf="@id/minus"
                 android:layout_toStartOf="@id/plus"
@@ -136,7 +143,7 @@
     <LinearLayout android:id="@android:id/widget_frame"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:gravity="end|center_vertical"
+        android:gravity="center|end"
         android:paddingStart="16dp"
         android:orientation="vertical" />
 </LinearLayout>
